syntax = "proto3";
option go_package = "github.com/szymon676/oggrpcscylla/proto";

service AuthService {
    rpc HandleRegister(RegisterRequest) returns (RegisterResponse);
    rpc HandleLogin(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}